Brief-kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mplatteau
  name: api-deployment
  labels:
      app: api
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: api
  template: # modèle de pod
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: sengsathit/brief-api:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
---

apiVersion: v1
kind: Service
metadata:
  namespace: mplatteau
  name: api-service
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 8000 
    targetPort: 8000 # port du conteneur
