Brief-kubernetes/mysql.yaml

# Déploiement pour MySQL
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mplatteau
  name: mysql-deployment
  labels:
      app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template: 
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      containers:
      - name: mysql
        image: sengsathit/brief-mysql:latest
        ports:
        - containerPort: 3306
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 3306  
          initialDelaySeconds: 10
          periodSeconds: 10
---
# Service pour MySQL
apiVersion: v1
kind: Service
metadata:
  namespace: mplatteau
  name: mysql-service
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
