Brief-kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: mplatteau
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway      
    appgw.ingress.kubernetes.io/backend-path-prefix: /mplatteau
spec:
  rules:
    - http:
        paths:
        - path: /mplatteau
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 8000
