Brief-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: mplatteau
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway      
    # appgw.ingress.kubernetes.io/backend-path-prefix: /mplatteau
    appgw.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /mplatteau/clients
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
